--- a/public/styles.css
+++ b/public/styles.css
@@ -1,112 +1,113 @@
-@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;500;700&display=swap");
 
 :root {
-    --primary-color: #04D361;
+  --primary-color: #04d361;
 }
 
-html, body {
-    height: 100%;
-}
-  
+html,
 body {
-    background-color: #0F0F13;
+  height: 100%;
+}
+
+body {
+  background-color: #0f0f13;
 }
 
 body,
 input,
 button {
-    font-family: 'JetBrains Mono', monospace;
+  font-family: "JetBrains Mono", monospace;
 }
 
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 
-    border: none;
-    outline: none;
+  border: none;
+  outline: none;
 
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 #chat {
-    height: 100%;
+  height: 100%;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 input,
 .messages {
-    background-color: #222429;
-    border: 1px solid var(--primary-color);
+  background-color: #222429;
+  border: 1px solid var(--primary-color);
 }
 
 input {
-    color: #fefefe;
+  color: #fefefe;
 
-    width: 100%;
-    max-width: 600px;
-    
-    height: 48px;
-    
-    padding: 8px 16px;
-    
-    font-size: 14px;
-    line-height: 24px;
+  width: 100%;
+  max-width: 600px;
 
-    border-radius: 8px;
+  height: 48px;
+
+  padding: 8px 16px;
+
+  font-size: 14px;
+  line-height: 24px;
+
+  border-radius: 8px;
 }
 
 input::placeholder {
-    color: #fefefe;
+  color: #fefefe;
 }
 
 .messages {
-    max-width: 600px;
-    
-    width: 600px;
-    height: 400px;
+  max-width: 600px;
 
-    padding: 24px;
+  width: 600px;
+  height: 400px;
 
-    margin: 24px 0;
+  padding: 24px;
+
+  margin: 24px 0;
 }
 
 .message strong {
-    color: #8C60F5;
+  color: #8c60f5;
 
-    text-transform: uppercase;
-    letter-spacing: .4px;
+  text-transform: uppercase;
+  letter-spacing: 0.4px;
 }
 
 .message {
-    color: #fefefe;
+  color: #fefefe;
 
-    margin-top: 8px;
+  margin-top: 8px;
 }
 
 button {
-    background-color: var(--primary-color);
-    color: #fefefe;
-    border-radius: 8px;
+  background-color: var(--primary-color);
+  color: #fefefe;
+  border-radius: 8px;
 
-    width: 100%;
-    max-width: 600px;
+  width: 100%;
+  max-width: 600px;
 
-    height: 48px;
-    
-    font-size: 16px;
-    letter-spacing: .2px;
-    text-transform: uppercase;
-    text-align: center;
-    
-    margin-top: 16px;
+  height: 48px;
 
-    transition: .2s;
+  font-size: 16px;
+  letter-spacing: 0.2px;
+  text-transform: uppercase;
+  text-align: center;
+
+  margin-top: 16px;
+
+  transition: 0.2s;
 }
 
 button:hover {
-    transform: translateY(-2px);
+  transform: translateY(-2px);
 }
